--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnections":"Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineprojectDB;Integrated Security=True;Encrypt=false;TrustServerCertificate=True;"
+    "Ecommerecewebstedatabasecontext": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineprojectDB;Integrated Security=True;Encrypt=false;TrustServerCertificate=True;"
   }
+
+  //"ApiAddress": "http://localhost:5256/"
+
 }
