--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -7,10 +7,27 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Ecommerecewebstedatabasecontext": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineprojectDB;Integrated Security=True;Encrypt=false;TrustServerCertificate=True;"
+    "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=Medicineserviceprojectdb;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
   }
-
-  //"ApiAddress": "http://localhost:5256/"
-
-
 }
+
+  //"ConnectionStrings": {
+  //  //  "Ecommerecewebstedatabasecontext" :"Server=freeasphosting.net;Database=MedicineprojectDB;User ID=ultrasoftware;Password=845401abcdefg;Encrypt=True;TrustServerCertificate=False;"
+  //  //"DefaultConnection": "Server=dpg-d50k2nu3jp1c73a6vli0-a,5432;Database=medicineprojectdb;User ID=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;Encrypt=True;TrustServerCertificate=False;",
+  //  //"ConnectionStrings": {
+  //    "DefaultConnection": "Host=dpg-d50k2nu3jp1c73a6vli0-a.oregon-postgres.render.com;Port=5432;Database=medicineprojectdb;Username=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;SSL Mode=Require;Trust Server Certificate=true"
+  //  }
+
+  
+
+
+
+//}
+
+
+//  }
+
+
+
+
+//}
