--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -6,10 +6,16 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineservicedbProject;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
+  //}
+
   "ConnectionStrings": {
-    "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=Medicineserviceprojectdb;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Host=dpg-d50k2nu3jp1c73a6vli0-a.oregon-postgres.render.com;Port=5432;Database=medicineprojectdb;Username=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;SSL Mode=Require;Trust Server Certificate=true"
   }
-}
+  }
+
+
 
 
   //"ConnectionStrings": {
