--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -9,9 +9,9 @@
   //"ConnectionStrings": {
   //  "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineservicedbProject;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
   //}
-  //"ImgBB": {
-  //  "ApiKey": "PASTE_YOUR_REAL_IMGBB_API_KEY_HERE"
-  //},
+  "ImgBB": {
+    "ApiKey": "PASTE_YOUR_REAL_IMGBB_API_KEY_HERE"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=dpg-d50k2nu3jp1c73a6vli0-a.oregon-postgres.render.com;Port=5432;Database=medicineprojectdb;Username=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;SSL Mode=Require;Trust Server Certificate=true"
   }
