code api update"latest --05:00pm--15/01/2026"

--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456",
+    "Issuer": "EcommerenceAPI",
+    "Audience": "EcommerenceClient"
+  },
+
   "AllowedHosts": "*",
   //"ConnectionStrings": {
   //  "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineservicedbProject;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
