--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -5,11 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Jwt": {
-    "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456",
-    "Issuer": "EcommerenceAPI",
-    "Audience": "EcommerenceClient"
-  },
+  //"Jwt": {
+  //  "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456",
+  //  "Issuer": "EcommerenceAPI",
+  //  "Audience": "EcommerenceClient"
+  //},
 
   "AllowedHosts": "*",
   //"ConnectionStrings": {
@@ -18,10 +18,18 @@
   //"ImgBB": {
   //  "ApiKey": "PASTE_YOUR_REAL_IMGBB_API_KEY_HERE"
   //},
+  //"ConnectionStrings": {
+  //  // "DefaultConnection": "Host=dpg-d50k2nu3jp1c73a6vli0-a.oregon-postgres.render.com;Port=5432;Database=medicineprojectdb;Username=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;SSL Mode=Require;Trust Server Certificate=true"
+  //  "DefaultConnections": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=medicineprojectdatabase;Integrated Security=True;Encrypt=false;TrustServerCertificate=True;"
+
+  //}
+
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d50k2nu3jp1c73a6vli0-a.oregon-postgres.render.com;Port=5432;Database=medicineprojectdb;Username=medicineprojectdb_user;Password=dDwtsBEdLkAEnivRPrpDBGZqq3ccPPD4;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
-}
+  }
+
+
 
 
 
