update repeater code--latest code--06:06--16/01/2026"

--- a/Ecommerencesite/appsettings.json
+++ b/Ecommerencesite/appsettings.json
@@ -24,10 +24,22 @@
 
   //}
 
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineDB;Trusted_Connection=True;TrustServerCertificate=True"
+  //}
+
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Host=ep-dark-star-ahlc54tv-pooler.c-3.us-east-1.aws.neon.tech;Database=medicineproject;Username=neondb_owner;Password=npg_hHCy3eIGW1BL;SSL Mode=Require;Trust Server Certificate=true"
+  //}
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-HH8FI1T\\SQLEXPRESS;Database=MedicineDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=ep-dark-star-ahlc54tv.c-3.us-east-1.aws.neon.tech;Port=5432;Database=medicineprojectdb;Username=neondb_owner;Password=npg_hHCy3eIGW1BL;SSL Mode=Require;Trust Server Certificate=true;Timeout=300;Command Timeout=300"
   }
-  }
+
+
+
+}
+
+
 
 
 
