--- a/Ecommerencesite/Dockerfile
+++ b/Ecommerencesite/Dockerfile
@@ -51,6 +51,8 @@
 
 
 # Stage 1: Build
+# Stage 1: Build
+# Stage 1: Build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
@@ -65,6 +67,10 @@ RUN dotnet publish -c Release -o /app/publish
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/publish .
+
+# Environment variables
 ENV ASPNETCORE_URLS=http://+:8080
+ENV ConnectionStrings__DefaultConnection="Host=ep-dark-star-ahlc54tv.c-3.us-east-1.aws.neon.tech;Port=5432;Database=medicineprojectdb;Username=neondb_owner;Password=npg_hHCy3eIGW1BL;SSL Mode=Require;Trust Server Certificate=true;Timeout=300;Command Timeout=300"
+
 EXPOSE 8080
 ENTRYPOINT ["dotnet", "Ecommerencesite.dll"]
