DEKHHO API CHECKING

--- a/Ecommerencesite/Dockerfile
+++ b/Ecommerencesite/Dockerfile
@@ -18,24 +18,23 @@
 #ENTRYPOINT ["dotnet", "Ecommerencesite.dll"]
 
 
-# Stage 1: Build
+# 1. Build Stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /app
+WORKDIR /src
 
-# Sabse pehle sari files copy karein
+# Sari files copy karein
 COPY . .
 
-# Wildcard use karke publish karein taaki path ki error na aaye
-RUN dotnet publish *.csproj -c Release -o /out
+# Publish karein (Wildcard se .csproj khud dhund lega)
+RUN dotnet publish *.csproj -c Release -o /app/publish
 
-# Stage 2: Runtime
+# 2. Runtime Stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-COPY --from=build /out .
+COPY --from=build /app/publish .
 
-# Render ke liye default port set karein
+# Render ka default port
 ENV ASPNETCORE_URLS=http://+:10000
 EXPOSE 10000
 
-# Dhyan dein: Agar file ka naam Ecommerencesite.dll hai toh wahi likhein
 ENTRYPOINT ["dotnet", "Ecommerencesite.dll"]
